--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -70,8 +70,8 @@ SP.CFG.DEVELOPMENT = "Fields highlighting"
 
 SP.TB.DELETE_ALL = "Purge"
 SP.TB.JS_DELETE_ALL_ENTRIES_WARN = "Are you really sure you want to delete all entries in this section? This action cannot be undone!"
-SP.DELETE_ENTRIES_COUNT = "Found %d entries to delete"
-SP.DELETED_ENTRY = "Entry '%s' deleted"
+SP.DELETE_ENTRIES_COUNT = "Found %d entries to delete."
+SP.DELETED_ENTRY = "Entry '%s' deleted."
 
 SP.FMN.SUGGESTING = "Enabled in Autosuggest"
 SP.CAT.CATEGORY_ENTRY_FIELDS = "Entry Fields"
@@ -965,7 +965,7 @@ SP.APP.PPP_EMAIL = "Recipient Email Address"
 SP.APP.PPP_RURL = "Return URL"
 SP.APP.PPP_CANCELURL = "Cancel URL"
 SP.APP.PPP_CC = "Currency Code"
-SP.APP.PPP_LOC = "Localized Button"
+SP.APP.PPP_LOC = "Localised Button"
 SP.APP.PPP_EXPL = "Explanation Text"
 SP.APP.PPP_SUBJECT = "Payment Subject"
 SP.EX.APP_UPDATE_DISABLED = "Not Applicable"
