--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -19,7 +19,7 @@
 SP.TP.ADMINISTRATIVE = "The field %s is an administrative field and not visible for regular users. You see this field because you have administrator rights."
 SP.ARIA.FILEUP-GROUP = "file upload button group"
 
-SP.ENTRY_STATUS_EXPIRED = "The entry's status of this particular entry is 'expired'. You can see this entry because you have permission to see expired entries."
+SP.ENTRY_STATUS_EXPIRED = "The status of this entry is 'expired'. You can see this entry because you have permission to see expired entries."
 
 SP.TP.SEARCH_HIDE = "Hide search parameters"
 SP.TP.SEARCH_REFINE = "Refine search parameters"
@@ -36,7 +36,7 @@ SP.FMN.SEARCH_SELECT_LIST = " --- select var:[name] ---"
 
 SP.ENTRY_REQUIRED_MESSAGE = "Fields marked with a star have to be filled in!"
 SP.ALPHALIST_SELECT = "Select"
-SP.CATEGORY_STATUS_UNPUBLISHED = "The category's status of this particular category is 'unpublished'. You can see this category because you have permission to see unpublished categories."
+SP.CATEGORY_STATUS_UNPUBLISHED = "The status of this category is 'unpublished'. You can see this category because you have permission to see unpublished categories."
 SP.FD.URL_ADDRESS = "URL address"
 SP.IMAGE_UPLOADED_CROP = "File \"%s\" has been uploaded. Click on the image preview to change the visible area."
 SP.IMAGE_CROP_HEADER = "Crop Image"
@@ -44,7 +44,7 @@ SP.ITEMID_MISSING_WARN = "It seems some URLs don't have a Joomla! Itemid set. Pr
 SP.SH.SEARCH_TOO_MANY_RESULTS = "The search returned too many results (%d)! Only the first %d results will be shown. Please specify more criteria to narrow down the search."
 SP.FM.ICON = "Icon"
 SP.ENTRY_STATUS_UNAPPROVED = "The currently displayed version of this entry is 'unapproved'. You can see this version because you have permission to see unapproved entries."
-SP.ENTRY_STATUS_UNPUBLISHED = "The entry's status of this particular entry is 'unpublished'. You can see this entry because you have permission to see unpublished entries."
+SP.ENTRY_STATUS_UNPUBLISHED = "The status of this entry is 'unpublished'. You can see this entry because you have permission to see unpublished entries."
 SP.INFO_DIFFERENT_LANGUAGE = "<strong>Heads up!</strong> You are editing this content (%s) in %s language. Please note, that all changes you make will be stored in this language!"
 SP.CRAWL_URL_PARSED_DONE = "Done. Parsed %d links."
 SP.CRAWL_URL_PARSED_WORKING = "Working... Parsed %d of %d pages in this loop."
