(#) Large image was not created if it should not be resized 	(#) Cropped image (cropped_) will be deleted after image processing (temporary file)    	(!) If uploading a new image for an entry, the old images of this field will be deleted    	(!) Default JPG quality set to 90%

--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -16,6 +16,8 @@
 
 ; Translations are made by our translation teams. Read more at https://www.sigsiu.net/center/languages.
 
+SP.FIELD_IMG_CANNOT_SAVE = "Cannot save image: %s."
+
 SP.CANNOT_GET_TYPED_FIELD = "Cannot get field for type. Db reports: %s."
 SP.CANNOT_COPY_FILE = "Cannot copy file %s to %s"
 SP.CAT_FIELD_SELECT_CAT_WITH_NO_CHILDS = "Please select a category without subcategories in field '%s'."
