(#) edit.js no longer compressed as it causes problems 	(+) Possibility not to load but to use specific fonts

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -181,6 +181,7 @@ SP.SECN.CFG.ICONS_FONT_AWESOME_4_4 = "Font Awesome 4 (4x)"
 SP.SECN.CFG.ICONS_FONT_AWESOME_4_5 = "Font Awesome 4 (5x)"
 SP.SECN.CFG.ICONS_MATERIAL = "Google's Material Icons"
 SP.SECN.CFG.ICONS_FONT_AWESOME_3_LOCAL = "Font Awesome 3 local (default)"
+SP.SECN.CFG.ICONS_FONT_NOLOAD="Joomla loads fonts"
 SP.OPT_FONTS_ICONS = "Font Icons"
 SP.CAT.USE_ICON_FONT = "Use Icons Font"
 SP.CAT.ICON_FONT_ADD_CLASS = "Add Font Class"
