implemented search operator selection
this allows to change the default AND-Search for mutiselect fields to be an OR-Search

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -403,6 +403,9 @@ SP.FM.SEARCH_METHOD = "Search Method"
 SP.FM.CHECKBOX_GROUP_OPT = "Checkbox Group"
 SP.FM.RADIO_BUTTONS_OPT = "Radio Buttons"
 SP.FM.MSELECT_LIST_OPT = "Multiple Select List"
+SP.FM.SEARCH_OPERATOR="Searchoperator"
+SP.FM.SEARCH_OPERATOR_AND="And"
+SP.FM.SEARCH_OPERATOR_OR="Or"
 SP.FM.SEARCH_PRIORITY = "Search Priority"
 SP.FM.FILTER = "Filter"
 SP.FM.MAX_LENGTH = "Max. Length"
