log messages corrected

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -93,6 +93,7 @@ SP.FORMS = "Form Settings"
 SP.FORMS_TITLE = "Title"
 
 SP.EN.REJECT_HISTORY = "during rejection"
+SP.HISTORY_CHANGE_TYPE_ADD = "Entry added"
 SP.HISTORY_CHANGE_TYPE_SAVE = "Edit/Update"
 SP.HISTORY_CHANGE_TYPE_REJECT = "Entry rejected"
 SP.HISTORY_CHANGE_TYPE_CHANGE_STATE = "State Change"
